--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,22 @@
 
 @theme {
   --tracking-tighter: -0.06em;
-  --tracking-extra-tighter: -0.09em;
+  --tracking-extra-tighter: -0.1em;
   --leading-extra-tight: 0.8;
   --leading-tight-phone: 0.2;
 }
 
 :root {
-  --background: #1F1C2C;
-  --foreground: #928DAB;
-  --cursor-default: #1F1C2C;
-  --cursor-hover: #928DAB;
+  --background: #D8A7B1;
+  --foreground: #333333;
+  --cursor-default: #333333;
+  --cursor-hover: #D8A7B1;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1F1C2C;
-    --foreground: #928DAB;
+    --background: #D8A7B1     ;
+    --foreground: #252525    ;
   }
 }
 
@@ -45,12 +45,12 @@ body {
 }
 
 ::selection {
-  background-color: #f7daff; /* Change this to your desired color */
+  background-color: #fff8c1; /* Change this to your desired color */
   color: #000; /* Text color when selected */
 }
 
 a:hover{
-  color: #f3c7ff;
+  color: #fff8c1   ;
 }
 
 button:hover{
@@ -88,7 +88,7 @@ button:hover{
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #928DAB;
+  background: #252525;
   transform-origin: bottom;
 }
 
@@ -98,6 +98,6 @@ button:hover{
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #928DAB;
+  background: #252525;
   transform-origin: top;
 }
